# othello

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: components.d.ts
src/components/: Board.vue  Button.vue  Cell.vue  GameInfo.vue  PachinkoChart.vue  Radio.vue  Result.vue  SalesMan.vue  SettingStart.vue  Stone.vue
src/components/Effect/: index.vue
src/components/Effect/Effects/: CircleAura.vue  Rose.vue
src/composables/: usePachinkoSimulator.ts  usePachinkoSimulator_.ts
src/logics/: board.ts  cpu.ts  gameRules.ts  monteCarlo.ts  pachinko.ts
src/pages/: index.vue  json.vue  pachinko.vue  salesman.vue  zaseki.vue
src/scss/: _common.scss
src/stores/: game.ts
src/types/: assets.d.ts  pachinko.ts  salseman.ts
src/utility/: audio.ts  distance.ts
src/wasm/: Cargo.toml
src/wasm/src/: lib.rs
src/workers/: cpuWorker.ts  pachinkoWorker.ts  salesmanRustWorker.ts  salesmanWorker.ts
