[package]
name = "salesman"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
fastrand = "2.0"
console_error_panic_hook = "0.1.7"
web-sys = { version = "0.3", features = ["console"] }
